# Kitchen-Display-System---KDS

./: .env.example  .gitignore  DOCKER.md  Makefile  PENDIENTES.md  docker-compose.prod.yml  docker-compose.yml
Backend/: .dockerignore  .env.copy  .env.development.example  .env.production.example  .gitignore  Dockerfile  Makefile  README.md  RUN.md  docker-compose.yml-copy  lol  pyproject.toml
Backend/Doc/: API_REFERENCE.md
Backend/app/: config.py  database.py  main.py
Backend/app/core/: limiter.py  logger.py  metrics.py  middleware.py  pagination.py  sanitazer.py  security.py
Backend/app/crud/: crud_auditoria.py  crud_cajas.py  crud_categorias.py  crud_clientes.py  crud_combos.py  crud_empresa.py  crud_lotes_inventario.py  crud_materias_primas.py  crud_mesas.py  crud_metodos_pago.py  crud_movimientos_inventario.py  crud_ordenes_compra.py  crud_pagos.py  crud_pedidos.py  crud_perfiles.py  crud_perfiles_usuario.py  crud_productos.py  crud_proveedores.py  crud_recetas.py  crud_sucursales.py  crud_usuarios_sucursales.py  crud_variantes_producto.py
Backend/app/models/: auditoria.py  caja.py  categoria.py  cliente.py  combo.py  empresa.py  lote_inventario.py  materia_prima.py  mesa.py  metodo_pago.py  movimiento_inventario.py  orden_compra.py  pago.py  pedido.py  perfil.py  producto.py  proveedor.py  receta.py  sucursal.py  usuario_sucursal.py  variante_producto.py
Backend/app/routers/: items.py
Backend/app/schemas/: auditoria.py  auth.py  caja.py  categoria.py  cliente.py  combo.py  item.py  (+17 more)
Backend/benji_kitchen_system_display.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Backend/logs/: app.json
Backend/mi_backend_fastapi.egg-info/: PKG-INFO  SOURCES.txt
(+198 files in other folders)
