[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ─── Metadatos del proyecto ──────────────────────────────────
[project]
name = "benji-kitchen-system-display"
version = "0.1.0"
description = "Backend FastAPI for BENJI Kitchen System Display"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name = "Samir Cabrera", email = "samircabrera2528@gmail.com" }
]

keywords = ["fastapi", "supabase", "backend", "api"]

dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "supabase>=2.4.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.24.0",
  "ruff>=0.4.0",
  "mypy>=1.9.0",
]

# ─── Setuptools ──────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ─── Ruff (linter / formatter) ───────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ─── Mypy ────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ─── Pytest ──────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]